<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>io.github.lnyocly</groupId>
    <artifactId>ai4j-rag-demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>ai4j-rag-demo</name>
    <description>企业级 RAG 开箱即用 demo: ai4j + PgVector + Ollama + GLM</description>

    <properties>
        <java.version>1.8</java.version>
        <ai4j.version>2.4.0</ai4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <!-- ai4j starter (compiled against SB 2.3.12 / Java 8; verifying SB 3.2 runtime compatibility) -->
        <dependency>
            <groupId>io.github.lnyo-cly</groupId>
            <artifactId>ai4j-spring-boot-starter</artifactId>
            <version>${ai4j.version}</version>
        </dependency>
        <!-- ai4j-agent: for the agent endpoint demonstrating RAG-as-tool + IoCapture (unified observability) -->
        <dependency>
            <groupId>io.github.lnyo-cly</groupId>
            <artifactId>ai4j-agent</artifactId>
            <version>${ai4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <!-- Caffeine cache for RAG answer cache (app-layer caching, not in ai4j) -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
